# Axum-Sample

./: Cargo.toml
src/: error.rs  main.rs  model.rs
src/web/: routes_login.rs  routes_ticket.rs
tests/: quick_dev.rs
